first manual commit

--- a/manual/manual.en.html
+++ b/manual/manual.en.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Manual</title>
-
+    <title>DAIKIN myAIR Manual</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
@@ -13,6 +12,7 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+        filter: grayscale(0%);
       }
 
       html {
@@ -20,15 +20,16 @@
       }
 
       body {
-        font-family: "SukhumvitSet";
+        font-family: "SukhumvitSet", -apple-system, BlinkMacSystemFont,
+          "Segoe UI", sans-serif;
         line-height: 1.6;
         color: #000;
         background: #fff;
         overflow-x: hidden;
         width: 100%;
-        filter: grayscale(0%);
       }
-      .scroll-progress {
+
+      .progress-bar {
         position: fixed;
         top: 0;
         left: 0;
@@ -37,19 +38,492 @@
         z-index: 9999;
         transition: width 0.1s ease;
       }
-      .container {
+
+      .main-container {
         width: 100%;
         margin: 0 auto;
         padding: 48px 24px;
       }
+
+      .content-section {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        margin-bottom: 48px;
+      }
+
+      .content-section.hidden {
+        display: none;
+      }
+
+      .section-header {
+        text-align: center;
+        padding: 32px;
+        border-radius: 16px;
+      }
+
+      .section-title {
+        font-size: 2rem;
+        font-weight: 700;
+        margin-bottom: 8px;
+      }
+
+      .section-description {
+        color: #666;
+      }
+
+      .card-wrapper {
+        width: 100%;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+      }
+
+      .device-grid {
+        display: flex;
+        flex-direction: row;
+        gap: 24px;
+      }
+
+      .device-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
+
+      .device-icon {
+        padding: 16px;
+        height: 71px;
+      }
+
+      .feature-grid {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 24px;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .feature-btn {
+        background: rgba(241, 241, 241, 1);
+        min-width: fit-content;
+        min-height: 40px;
+        border: none;
+        border-radius: 40px;
+        padding: 8px 16px;
+        cursor: pointer;
+        transition: background 0.3s ease;
+      }
+
+      .feature-btn:hover {
+        background: rgba(220, 220, 220, 1);
+      }
+
+      .download-card {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        justify-content: space-between;
+        align-items: center;
+        background-color: rgba(241, 241, 241, 1);
+        max-width: 960px;
+        width: 100%;
+        min-height: 525px;
+        border-radius: 40px;
+        padding: 24px;
+      }
+
+      .download-header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 16px;
+        text-align: center;
+      }
+
+      .download-btn {
+        background: rgba(0, 148, 226, 1);
+        color: white !important;
+        width: 133px;
+        height: 40px;
+        border: none;
+        border-radius: 40px;
+        padding: 8px 16px;
+        cursor: pointer;
+        transition: background 0.3s ease;
+      }
+
+      .download-btn:hover {
+        background: rgba(0, 128, 200, 1);
+      }
+
+      .qr-grid {
+        display: flex;
+        flex-direction: row;
+        gap: 48px;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .qr-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 8px;
+      }
+
+      .qr-placeholder {
+        width: 150px;
+        height: 150px;
+        background: #ddd;
+        border-radius: 8px;
+      }
+
+      .connection-grid {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 24px;
+        justify-content: center;
+      }
+
+      .connection-card {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        max-width: 250px;
+      }
+
+      .connection-image {
+        width: 250px;
+        height: 160px;
+        background-color: #00b4ff;
+        border-radius: 24px;
+      }
+
+      .connection-content {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+      }
+
+      .connection-btn {
+        color: white;
+        background-color: black;
+        padding: 8px 16px;
+        border-radius: 40px;
+        border: none;
+        cursor: pointer;
+        width: fit-content;
+        transition: background 0.3s ease;
+        margin-top: auto;
+      }
+
+      .connection-btn:hover {
+        background-color: #333;
+      }
+
+      .back-btn {
+        background: rgba(0, 148, 226, 1);
+        color: white;
+        padding: 12px 24px;
+        border: none;
+        border-radius: 40px;
+        cursor: pointer;
+        margin: 0 auto;
+        display: block;
+        transition: background 0.3s ease;
+      }
+
+      .back-btn:hover {
+        background: rgba(0, 128, 200, 1);
+      }
+
+      @media (max-width: 768px) {
+        .device-grid {
+          flex-direction: column;
+        }
+
+        .device-item {
+          flex-direction: row;
+        }
+
+        .qr-grid {
+          flex-direction: column;
+          gap: 24px;
+        }
+      }
     </style>
   </head>
   <body>
-    <div class="scroll-progress" id="scrollProgress"></div>
+    <div class="progress-bar" id="scrollProgress"></div>
 
-    <div class="container">
-        
-    </div>
+    <main class="main-container">
+      <!-- Welcome Section -->
+      <section class="content-section" id="welcome-section">
+        <div class="section-header">
+          <h1 class="section-title">Welcome to the DAIKIN myAIR app</h1>
+          <p class="section-description">
+            Experience the convenience of smart air conditioning with this app.
+          </p>
+        </div>
 
+        <div class="card-wrapper">
+          <div class="device-grid">
+            <div class="device-item">
+              <img
+                class="device-icon"
+                src="https://github.com/voicetestdit22-bit/web-images/blob/main/images/manual/welcome/aircon.png?raw=true"
+                alt="Air Conditioner"
+              />
+              <p>Air Conditioner</p>
+            </div>
+            <div class="device-item">
+              <img
+                class="device-icon"
+                src="https://github.com/voicetestdit22-bit/web-images/blob/main/images/manual/welcome/apu.png?raw=true"
+                alt="Air Purifier"
+              />
+              <p>Air Purifier</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Features Navigation Section -->
+      <section class="content-section" id="features-section">
+        <div class="section-header">
+          <h1 class="section-title">Features</h1>
+        </div>
+
+        <div class="card-wrapper">
+          <nav class="feature-grid">
+            <button class="feature-btn" data-section="control">
+              Simply control your AIR
+            </button>
+            <button class="feature-btn" data-section="management">
+              Air Management
+            </button>
+            <button class="feature-btn" data-section="scheduling">
+              Scheduling
+            </button>
+            <button class="feature-btn" data-section="energy">
+              Energy monitoring
+            </button>
+            <button class="feature-btn" data-section="settings">
+              Settings
+            </button>
+          </nav>
+        </div>
+      </section>
+
+      <!-- Download Section -->
+      <section class="content-section" id="download-section">
+        <div class="section-header">
+          <h1 class="section-title">Just a few steps before you're ready</h1>
+        </div>
+
+        <div class="card-wrapper">
+          <article class="download-card">
+            <div class="download-header">
+              <h2>You've downloaded the app already, right?</h2>
+              <p>
+                If you haven't downloaded it yet, scan the QR code or tap to
+                download.
+              </p>
+              <button class="download-btn">Download now</button>
+            </div>
+
+            <div class="qr-grid">
+              <div class="qr-item">
+                <div class="qr-placeholder"></div>
+                <p>Android</p>
+              </div>
+              <div class="qr-item">
+                <div class="qr-placeholder"></div>
+                <p>iOS</p>
+              </div>
+            </div>
+
+            <p style="text-align: center; color: #666; font-size: 0.9rem">
+              Available for Android version 10.0 or higher<br />
+              Available for iOS version 14.0 or higher
+            </p>
+          </article>
+        </div>
+      </section>
+
+      <!-- Connection Section -->
+      <section class="content-section" id="connection-section">
+        <div class="section-header">
+          <h1 class="section-title">Connection</h1>
+        </div>
+
+        <div class="card-wrapper">
+          <div class="connection-grid">
+            <article class="connection-card">
+              <div class="connection-image"></div>
+              <div class="connection-content">
+                <h3>Sign in with Social Login</h3>
+                <p>Supports Facebook, Google, and Apple ID</p>
+              </div>
+              <button class="connection-btn">Learn more</button>
+            </article>
+
+            <article class="connection-card">
+              <div class="connection-image"></div>
+              <div class="connection-content">
+                <h3>Use control Offline mode</h3>
+                <p>Control your devices without internet</p>
+              </div>
+              <button class="connection-btn">Learn more</button>
+            </article>
+
+            <article class="connection-card">
+              <div class="connection-image"></div>
+              <div class="connection-content">
+                <h3>DEMO mode</h3>
+                <p>Try the app without connecting devices</p>
+              </div>
+              <button class="connection-btn">Learn more</button>
+            </article>
+
+            <article class="connection-card">
+              <div class="connection-image"></div>
+              <div class="connection-content">
+                <h3>Initial setup</h3>
+                <p>Get started with your first device</p>
+              </div>
+              <button class="connection-btn">Learn more</button>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <!-- Feature Detail Sections (Hidden by default) -->
+      <section class="content-section hidden" id="control-section">
+        <div class="section-header">
+          <h1 class="section-title">Simply Control Your AIR</h1>
+          <p class="section-description">
+            Control your air conditioning with ease from anywhere.
+          </p>
+        </div>
+        <button class="back-btn" onclick="showMainSections()">
+          Back to Features
+        </button>
+      </section>
+
+      <section class="content-section hidden" id="management-section">
+        <div class="section-header">
+          <h1 class="section-title">Air Management</h1>
+          <p class="section-description">
+            Manage multiple air conditioning units efficiently.
+          </p>
+        </div>
+        <button class="back-btn" onclick="showMainSections()">
+          Back to Features
+        </button>
+      </section>
+
+      <section class="content-section hidden" id="scheduling-section">
+        <div class="section-header">
+          <h1 class="section-title">Scheduling</h1>
+          <p class="section-description">
+            Set up schedules for automatic temperature control.
+          </p>
+        </div>
+        <button class="back-btn" onclick="showMainSections()">
+          Back to Features
+        </button>
+      </section>
+
+      <section class="content-section hidden" id="energy-section">
+        <div class="section-header">
+          <h1 class="section-title">Energy Monitoring</h1>
+          <p class="section-description">
+            Track your energy consumption and save on costs.
+          </p>
+        </div>
+        <button class="back-btn" onclick="showMainSections()">
+          Back to Features
+        </button>
+      </section>
+
+      <section class="content-section hidden" id="settings-section">
+        <div class="section-header">
+          <h1 class="section-title">Settings</h1>
+          <p class="section-description">
+            Customize your app preferences and device settings.
+          </p>
+        </div>
+        <button class="back-btn" onclick="showMainSections()">
+          Back to Features
+        </button>
+      </section>
+    </main>
+
+    <script>
+      // Scroll progress bar
+      window.addEventListener("scroll", () => {
+        const winScroll = document.documentElement.scrollTop;
+        const height =
+          document.documentElement.scrollHeight -
+          document.documentElement.clientHeight;
+        const scrolled = (winScroll / height) * 100;
+        document.getElementById("scrollProgress").style.width = scrolled + "%";
+      });
+
+      // Feature navigation
+      const featureBtns = document.querySelectorAll(".feature-btn");
+      const mainSections = [
+        "welcome-section",
+        "features-section",
+        "download-section",
+        "connection-section",
+      ];
+
+      featureBtns.forEach((btn) => {
+        btn.addEventListener("click", () => {
+          const sectionId = btn.getAttribute("data-section") + "-section";
+
+          // Hide main sections
+          mainSections.forEach((id) => {
+            document.getElementById(id).classList.add("hidden");
+          });
+
+          // Show selected feature section
+          document.getElementById(sectionId).classList.remove("hidden");
+
+          // Scroll to top
+          window.scrollTo({ top: 0, behavior: "smooth" });
+        });
+      });
+
+      // Back to main sections
+      function showMainSections() {
+        // Show main sections
+        mainSections.forEach((id) => {
+          document.getElementById(id).classList.remove("hidden");
+        });
+
+        // Hide all feature detail sections
+        document
+          .querySelectorAll(
+            '[id$="-section"]:not(#welcome-section):not(#features-section):not(#download-section):not(#connection-section)'
+          )
+          .forEach((section) => {
+            section.classList.add("hidden");
+          });
+
+        // Scroll to features section
+        document
+          .getElementById("features-section")
+          .scrollIntoView({ behavior: "smooth" });
+      }
+    </script>
   </body>
 </html>
