--- a/web/top/top.en.html
+++ b/web/top/top.en.html
@@ -410,7 +410,7 @@
 
     .slider-image {
       max-width: 400px;
-      /* width: 100%; */
+      width: 100%;
       transition: transform 0.3s ease;
     }
 
