--- a/web/manual/air-card.en.html
+++ b/web/manual/air-card.en.html
@@ -227,6 +227,41 @@
         background-color: #333;
       }
 
+       .note-box {
+        max-width: 650px;
+        margin: 16px auto 0;
+        font-size: 0.95rem;
+      }
+
+      .note-box img {
+        width: 20px;
+        height: 20px;
+        margin-right: 6px;
+        vertical-align: middle;
+      }
+
+      .note-box strong {
+        margin: 0 4px;
+      }
+
+      .overview-box {
+        margin: 5rem auto;
+        max-width: 960px;
+        width: 100%;
+      }
+
+      .overview-box h1 {
+        font-size: clamp(1.6rem, 2vw + 1rem, 2rem);
+      }
+
+      .overview-box p {
+        margin-top: 1.5rem;
+        line-height: 1.8;
+        letter-spacing: 0.3px;
+        color: #000;
+        font-size: 1.05rem;
+      }
+
       .back-btn {
         background: rgba(0, 148, 226, 1);
         color: white;
@@ -327,87 +362,137 @@
       <!-- Download Section -->
       <section class="content-section" id="download-section">
         <div class="section-header">
-          <h1 class="section-title">Just a few steps before you're ready</h1>
+          <h1 class="section-title">For better AIR in your room </h1>
         </div>
 
         <div class="card-wrapper">
           <article class="download-card">
             <div class="download-header">
-              <h2>You've downloaded the app already, right?</h2>
-              <p style="color: #7f7f7f;">
-                If you haven't downloaded it yet, scan the QR code or tap to
-                download.
+              <p>AIR CARD feature lets your devices work together follow Daikin’s logic.
+                One adds aroma while the other cools the room or boosts airflow.
+                Creating the perfect atmosphere for any activity. 
               </p>
-              <button class="download-btn">Download now</button>
             </div>
 
             <div class="qr-grid">
               <div class="qr-item">
                 <img  class="qr-placeholder"
-                  src="/images/manual/welcome/qr.png"
-                  alt="qr-android"
+                  src="/images/manual/air-card/Fitness.png"
+                  alt="qr-android"            
                 />
-                <p>Android</p>
               </div>
               <div class="qr-item">
                 <img  class="qr-placeholder"
-                  src="/images/manual/welcome/qr.png"
+                  src="/images/manual/air-card/sleep.png"
                   alt="qr-android"
                 />
-                <p>iOS</p>
+              </div>
+               <div class="qr-item">
+                <img  class="qr-placeholder"
+                  src="/images/manual/air-card/Focus.png"
+                  alt="qr-android"            
+                />
+              </div>
+               <div class="qr-item">
+                <img  class="qr-placeholder"
+                  src="/images/manual/air-card/Chill-out.png"
+                  alt="qr-android"            
+                />
               </div>
             </div>
-
-            <p style="text-align: center; color: #666; font-size: 0.9rem">
-              Available for Android version 10.0 or higher<br />
-              Available for iOS version 14.0 or higher
-            </p>
+            <p>AIR CARD is available in Online mode only </p>
           </article>
         </div>
       </section>
 
-      <!-- Connection Section -->
-      <section class="content-section" id="connection-section">
-        <div class="section-header">
-          <h1 class="section-title">Connection</h1>
+       <div class="overview-box">
+            <h1> AIR CARD </h1>
+            <p> To start using AIRCARD make sure you are in online mode and finish the initial set up or see 
+                <a>how to set up</a> Now you can follow step down below
+            </p>
+
+            <p>
+                1. On Air management page, select your preferred place on the top.
+                <br> 2. Tap to your room. 
+                <br> 3.Now you’re inside the room. The AIR CARD is on top of the screen. You can choose any AIR CARD as you like.            
+            </p>
+
+            <img
+                src="/images/manual/air-card/air-card-phone1.png"
+            />
+            <p>
+                4. To use AIR CARD, set duration time and setting device operation such as adjust temperature, 
+                airflow rate or just use the setting as it is. You can select how long you want this specific AIR CARD to run or let it operate continuously as long as maximum capacity of devices.
+            </p>
+
+            <div class="note-box">
+                <img
+                    src="/images/manual/schedule/note-Vector.png"
+                />
+                <strong>Note :</strong>
+                <span> in Sleep AIR CARD you need to set wake up time.</span>
+            </div>
+
+            <p>
+                5. Next set device operation such as adjust temperature, airflow rate by tapping at the device or just use the setting as it is. If you have one more types of device, you can choose just one device to run by tapping “Disabled” the device you don’t want it to run.
+                <br> 6. When you’re ready , tap “Start this AIR CARD”. The screen will start counting your set time.
+                <br> 7. To stop, tap “Stop this AIR CARD”       
+            </p>
+            <img 
+                src="/images/manual/air-card/air-card-phone2.png"
+            />
         </div>
 
-        <div class="card-wrapper">
-          <div class="connection-grid">
-            <article class="connection-card">
-              <div class="connection-content">
-                <h3>Sign in with Social <br> Login</h3>
-                <p>Supports Facebook, Google, <br> and Apple ID</p>
-              </div>
-              <a style="color: #0094E2;">Learn more</a>
-            </article>
+         <div class="overview-box">
+            <h1> Customize AIR CARD </h1>
+            <p>This feature allows you to personalize the device’s settings exactly the way you like, 
+                giving you a truly tailored experience that fits your lifestyle and makes every moment more enjoyable.
+            </p>
 
-            <article class="connection-card">
-              <div class="connection-content">
-                <h3>Use control Offline <br> mode</h3>
-                <p>Control your devices without internet</p>
-              </div>
-              <a style="color: #0094E2;">Learn more</a>
-            </article>
+            <div class="note-box">
+                <img
+                    src="/images/manual/schedule/note-Vector.png"
+                />
+                <strong>Note :</strong>
+                <span> Before you start customizing the AIR CARD, you need to create your AIR CARD first. </span>
+            </div>
 
-            <article class="connection-card">
-              <div class="connection-content">
-                <h3>DEMO mode</h3>
-                <p>Try the app without connecting devices</p>
-              </div>
-              <a style="color: #0094E2;">Learn more</a>
-            </article>
+            <p>Go to 
+                <br> <a style="color: #0094E2;"> Create your AIR CARD </a>
+            </p>
 
-            <article class="connection-card">
-              <div class="connection-content">
-                <h3>Initial setup</h3>
-                <p>Get started with your first device</p>
-              </div>
-              <a style="color: #0094E2;">Learn more</a>
-            </article>
-          </div>
+            <p> To use Customize AIR CARD
+                <br> 1. Go to your room. Under the AIR CARD list, tap “See All.” 
+                <br> 2. Select the AIR CARD you created.
+                <br> 3. Set the functions according to your preferences.
+            </p>
+
+            <img
+                src="/images/manual/air-card/Customize.png"
+            />
         </div>
-      </section>
+        
+         <div class="overview-box">
+            <h1> Customize operation setting </h1>
+            <p>Additional setting of room air conditioner and air purifier behavior.
+                <br> Customize operation section, tap <img src="/images/manual/energy/Vector-setting.png" />      
+                in the right side to open the setting.
+            </p>
+
+            <p> Room Air setting
+                <br> . After AIR CARD ends, you can set whether you want  the device to turn off or keep running as the last operation.
+                <br> . Aroma setting
+                <br> . Before AIR CARD starts, you can air purifier to automatically do pre clean by selecting ON option. If set to OFF. 
+            </p>
+
+            <img
+                src="/images/manual/air-card/operation-setting.png"
+            />
+        </div>
+
+
+
+
 
       <!-- Feature Detail Sections (Hidden by default) -->
       <section class="content-section hidden" id="control-section">
