--- a/web/manual/airmanagement.en.html
+++ b/web/manual/airmanagement.en.html
@@ -129,7 +129,7 @@
         background-color: rgba(241, 241, 241, 1);
         max-width: 960px;
         width: 100%;
-        min-height: 525px;
+        min-height: 302px;
         border-radius: 40px;
         padding: 24px;
       }
@@ -327,81 +327,50 @@
       <!-- Download Section -->
       <section class="content-section" id="download-section">
         <div class="section-header">
-          <h1 class="section-title">Just a few steps before you're ready</h1>
+          <h1 class="section-title">Easily manage you AIR</h1>
         </div>
 
         <div class="card-wrapper">
           <article class="download-card">
+            <img 
+              src="/images/manual/air-managment/manage-air.png"
+              alt="management-air"
+            />
             <div class="download-header">
-              <h2>You've downloaded the app already, right?</h2>
-              <p style="color: #7f7f7f;">
-                If you haven't downloaded it yet, scan the QR code or tap to
-                download.
-              </p>
-              <button class="download-btn">Download now</button>
+              <h2>Conveniently manage your devices by organizing 
+                <br>them according to the rooms in your home.
+              </h2>
+              <h2  style="color: #00B4FF;">Follow the step below to start control your device</h2>
             </div>
-
-            <div class="qr-grid">
-              <div class="qr-item">
-                <img  class="qr-placeholder"
-                  src="/images/manual/welcome/qr.png"
-                  alt="qr-android"
-                />
-                <p>Android</p>
-              </div>
-              <div class="qr-item">
-                <img  class="qr-placeholder"
-                  src="/images/manual/welcome/qr.png"
-                  alt="qr-android"
-                />
-                <p>iOS</p>
-              </div>
-            </div>
-
-            <p style="text-align: center; color: #666; font-size: 0.9rem">
-              Available for Android version 10.0 or higher<br />
-              Available for iOS version 14.0 or higher
-            </p>
           </article>
         </div>
       </section>
 
       <!-- Connection Section -->
       <section class="content-section" id="connection-section">
-        <div class="section-header">
-          <h1 class="section-title">Connection</h1>
-        </div>
-
+        
         <div class="card-wrapper">
           <div class="connection-grid">
             <article class="connection-card">
               <div class="connection-content">
-                <h3>Sign in with Social <br> Login</h3>
-                <p>Supports Facebook, Google, <br> and Apple ID</p>
+                <h3>How to add device <br> to your place </h3>
+                <p>You can add device to use <br> in offline and online mode </p>
               </div>
               <a style="color: #0094E2;">Learn more</a>
             </article>
 
             <article class="connection-card">
               <div class="connection-content">
-                <h3>Use control Offline <br> mode</h3>
-                <p>Control your devices without internet</p>
+                <h3> How to control <br> room air conditioner </h3>
+                <p>Pure air control, right at <br> your fingertips</p>
               </div>
               <a style="color: #0094E2;">Learn more</a>
             </article>
 
             <article class="connection-card">
               <div class="connection-content">
-                <h3>DEMO mode</h3>
+                <h3>How to control <br> air purifier</h3>
                 <p>Try the app without connecting devices</p>
-              </div>
-              <a style="color: #0094E2;">Learn more</a>
-            </article>
-
-            <article class="connection-card">
-              <div class="connection-content">
-                <h3>Initial setup</h3>
-                <p>Get started with your first device</p>
               </div>
               <a style="color: #0094E2;">Learn more</a>
             </article>
