--- a/web/top/top.en.html
+++ b/web/top/top.en.html
@@ -183,17 +183,17 @@
       }
 
       .iotbtn--primary {
-        background: linear-gradient(135deg, #000 0%, #1a1a1a 100%);
-        color: #fff;
-        border: none;
+        background: none;
+        color: #000;
+        border: 2px solid #000;
         gap: 1rem;
         min-width: 200px;
       }
 
       .iotbtn__arrow {
-        width: 36px;
-        height: 36px;
-        border: 2px solid #fff;
+        width: 44px;
+        height: 44px;
+        background-color: #000;
         border-radius: 50%;
         display: flex;
         align-items: center;
@@ -582,7 +582,7 @@
             onclick="DownloadRedirection()"
           >
             Download now
-            <span class="btn__arrow">
+            <span class="iotbtn__arrow">
               <img
                 src="https://github.com/voicetestdit22-bit/web-images/blob/main/images/top/introduce/arrow.png?raw=true"
                 alt=""
